# mgcd

./: .gitignore  Cargo.toml  README.md
src/: calc.rs  gcd.rs  gen.rs  main.rs  opt.rs  util.rs
