[package]
name = "gdc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.9.0"
tokio = { version = "1.44.0", features = ["sync", "fs", "macros", "rt-multi-thread", "io-util"]}
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }